--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "aidj",
   "version": "0.1.0",
   "homepage": "https://kegdotcom.github.io/aidj/.",
   "private": true,
